Cycles Math Multiply Add does not work anymore #90689

Closed
opened 2021-08-15 18:22:42 +02:00 by Henrik D. · 15 comments
Member

System Information
Operating system: Linux-5.10.0-6-amd64-x86_64-with-glibc2.31 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.73.01

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-08-14 02:46, hash: 8f2b60ddbf
Worked: always

Bisecting points to 6d24017529 being the culprit commit.

Short description of error
The Addend value of the multiply add math node is not added, when using Cycles.

Exact steps for others to reproduce the error

  1. Go to shader nodes and add a Math node
  2. Change the Math node to Multiply Add and display it (Ctrl+Shift)
  3. Change the addend and observe the color of the cube in Eevee and in Cycles. (stay the same color in Cycles)
**System Information** Operating system: Linux-5.10.0-6-amd64-x86_64-with-glibc2.31 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.73.01 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-08-14 02:46, hash: `8f2b60ddbf` Worked: always **Bisecting points to 6d24017529 being the culprit commit.** **Short description of error** The Addend value of the multiply add math node is not added, when using Cycles. **Exact steps for others to reproduce the error** 1. Go to shader nodes and add a Math node 2. Change the Math node to Multiply Add and display it (Ctrl+Shift) 3. Change the addend and observe the color of the cube in Eevee and in Cycles. (stay the same color in Cycles)
Author
Member

Added subscriber: @HDMaster84

Added subscriber: @HDMaster84

#90705 was marked as duplicate of this issue

#90705 was marked as duplicate of this issue
Member

Added subscriber: @Alaska

Added subscriber: @Alaska
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm. I'll bisect the issue to see what I can find.

System Information:
Operating system: Linux-5.10.0-8-amd64-x86_64-with-glibc2.31 64 Bits
Graphics card: NA

Blender Version:
Broken version: 3.0.0 Alpha, branch: master, commit date: 2021-08-15 23:08, hash: 899935d5d0

Can confirm. I'll bisect the issue to see what I can find. **System Information:** Operating system: Linux-5.10.0-8-amd64-x86_64-with-glibc2.31 64 Bits Graphics card: NA **Blender Version:** Broken version: 3.0.0 Alpha, branch: master, commit date: 2021-08-15 23:08, hash: `899935d5d0`
Member

Added subscribers: @povmaniac, @brecht

Added subscribers: @povmaniac, @brecht
Member

Bisecting points to 6d24017529 being the culprit commit.

CC @brecht

Bisecting points to 6d24017529 being the culprit commit. CC @brecht
Member

Removed subscriber: @povmaniac

Removed subscriber: @povmaniac
Member

Added subscriber: @CharlieJolly

Added subscriber: @CharlieJolly
Member

Introduced in 6d24017529

Possible fix below, @brecht, do you want to make a more robust fix?

diff --git a/intern/cycles/blender/blender_shader.cpp b/intern/cycles/blender/blender_shader.cpp
index bf481ab4e3d..f5b4b77d388 100644
--- a/intern/cycles/blender/blender_shader.cpp
+++ b/intern/cycles/blender/blender_shader.cpp
@@ -1047,6 +1047,9 @@ static ShaderInput *node_find_input_by_name(ShaderNode *node, BL::NodeSocket &b_
       if (string_endswith(name, "_001")) {
         string_replace(name, "_001", "2");
       }
+      else if (string_endswith(name, "_002")) {
+        string_replace(name, "_002", "3");
+      }
       else {
         name += "1";
       }

Edit: Snap @Alaska 😆

Introduced in 6d24017529 Possible fix below, @brecht, do you want to make a more robust fix? ``` diff --git a/intern/cycles/blender/blender_shader.cpp b/intern/cycles/blender/blender_shader.cpp index bf481ab4e3d..f5b4b77d388 100644 --- a/intern/cycles/blender/blender_shader.cpp +++ b/intern/cycles/blender/blender_shader.cpp @@ -1047,6 +1047,9 @@ static ShaderInput *node_find_input_by_name(ShaderNode *node, BL::NodeSocket &b_ if (string_endswith(name, "_001")) { string_replace(name, "_001", "2"); } + else if (string_endswith(name, "_002")) { + string_replace(name, "_002", "3"); + } else { name += "1"; } ``` Edit: Snap @Alaska 😆
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Recent regression: marking a high priority issue.

Recent regression: marking a high priority issue.
Member

Added subscriber: @SimonThommes

Added subscriber: @SimonThommes

This issue was referenced by df3884d512

This issue was referenced by df3884d51244a8a08c62308a3d7e84011090df8b

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2021-08-16 15:55:22 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#90689
No description provided.