Fix T90689, T90705: Cycles math node with 3 inputs broken after recent changes

Thanks Charlie Jolly for finding the fix.